# crc32fast-lib-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  crc32fast.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
src/: lib.rs
