[package]
name = "crc32fast-lib"
version = "1.0.1"
edition = "2021"
authors = ["Don MacAskill"]
keywords = ["crc", "crc32", "simd", "checksum", "nvme"]
categories = ["algorithms", "encoding", "hardware-support"]
license = "MIT"
repository = "https://github.com/awesomized/crc32fast-lib-rust"
description = "Fast, SIMD-accelerated CRC-32/ISO-HDLC (aka 'crc32') checksum computation in Rust exposed as a C-compatible shared library"
readme = "README.md"

[dependencies]
crc32fast = "1"

[profile.release]
strip = true

[dev-dependencies]
cbindgen = "0.27.0"

[lib]
name = "crc32fast"
crate-type = ["cdylib"]
